--- a/infra/nginx.conf
+++ b/infra/nginx.conf
@@ -4,8 +4,9 @@ server {
   client_max_body_size 20M;
 
   location /api/docs/ {
-        root /usr/share/nginx/html/api/docs;
+        root /usr/share/nginx/html/;
         try_files $uri $uri/redoc.html;
+        client_max_body_size 20M;
     }
 
   location /api/ {
