--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -40,6 +40,7 @@ services:
     ports:
       - 7000:80
     volumes:
+      - ./docs/:/usr/share/nginx/html/api/docs/
       - static_value:/staticfiles/
       - media_value:/media/
     depends_on:
